some API changes to reverse engineer to the required contract
