# solutions/fuse/impl/src/main/java/com/redhat/cajun/navy/incident/entity/IncidentBuilder.java
@@ -12,12 +12,12 @@ public class IncidentBuilder {
     }
 
     public IncidentBuilder latitude(String latitude) {
-        incident.setLatitude(latitude);
+        incident.setLat(latitude);
         return this;
     }
 
     public IncidentBuilder longitude(String longitude) {
-        incident.setLongitude(longitude);
+        incident.setLon(longitude);
         return this;
     }
 
@@ -43,6 +43,11 @@ public class IncidentBuilder {
 
     public IncidentBuilder reportedTime(long timestamp) {
         incident.setReportedTime(timestamp);
+        return this;
+    }
+
+    public IncidentBuilder version(int version) {
+        incident.setVersion(version);
         return this;
     }
 
